# SCM_MIREA

./: .gitignore  Readme.md  pyproject.toml
hw_1/: main.py
hw_1/src/config/: __init__.py  file_system.py  get_config.py
hw_1/src/shell/: __init__.py  emulator.py
hw_1/src/tests/: tests.py
hw_1/test_dir/: test_archive.tar
hw_2/: main.py
hw_2/src/: main.py  test.py  utils.py
hw_2/src/config/: __init__.py  config.py
hw_2/src/graph/: __init__.py  dependency_graph.py  plantuml_renderer.py
hw_2/src/tests/: test_plantuml_renderer.py
hw_3/: main.py
hw_3/src/tests/: generator.py  test.py
hw_3/src/utils/: __init__.py  errors.py  generator.py  parser.py
hw_4/src/assemble/: assembler.py  log_assemble.json
hw_4/src/config/: input.asm
hw_4/src/interpret/: interpretator.py  result.json
hw_4/src/tests/: log.json  tests.py
