[tool.poetry]
name = "hw-1"
version = "0.1.0"
description = ""
authors = ["shkityr.k <shkityr.k@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^75.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
